feat: Workout Skeleton

--- a/src/components/Workout/WorkoutProgress/WorkoutProgress.module.scss
+++ b/src/components/Workout/WorkoutProgress/WorkoutProgress.module.scss
@@ -1,7 +1,9 @@
 @use '../../../colors.scss';
 
 .WorkoutProgress {
-  
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .WorkoutProgressBar {
