feat: Started Workout structure

--- a/src/components/Workout/WorkoutHeader/WorkoutHeader.module.scss
+++ b/src/components/Workout/WorkoutHeader/WorkoutHeader.module.scss
@@ -1,5 +1,12 @@
 .WorkoutHeader {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 1rem;
+}
+
+.WorkoutHeaderGroup {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
