--- a/src/components/Workout/Exercise/Exercise.module.scss
+++ b/src/components/Workout/Exercise/Exercise.module.scss
@@ -1,3 +1,20 @@
 .Exercise {
-  
+  td {
+    white-space: nowrap;
+  }
+}
+
+.VideoContainer {
+  display: flex;
+  justify-content: center;
+
+  &[data-is-expanded="false"] {
+    display: none;
+  }
+
+  iframe {
+    width: 560px;
+    height: 315px;
+    max-width: 100%;
+  }
 }
