--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,3 +1,4 @@
+$red: #B22222;
 $dark-red: #722f37;
 
 $blue: #4169E1;
@@ -5,8 +6,10 @@ $dark-blue: #343451;
 
 $green: #008000;
 
-$gray: #eee;
-$dark-gray: #bbb;
+$yellow: #FDB605;
+
+$light-gray: #eee;
+$gray: #bbb;
 
 $white: #f8f8f8;
 $black: #333;
