--- a/src/components/Workout/ExerciseList/Exercise/ExerciseBody/ExerciseStatus/ExerciseStatus.module.scss
+++ b/src/components/Workout/ExerciseList/Exercise/ExerciseBody/ExerciseStatus/ExerciseStatus.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 100%;
-  background-color: colors.$gray;
+  background-color: colors.$light-gray;
   width: 2rem;
   height: 2rem;
   cursor: pointer;
