--- a/src/components/Workout/ExerciseList/ExerciseList.module.scss
+++ b/src/components/Workout/ExerciseList/ExerciseList.module.scss
@@ -5,5 +5,5 @@
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
-  border-top: 1px solid colors.$gray;
+  border-top: 1px solid colors.$light-gray;
 }
