--- a/src/components/Workout/WorkoutHeader/WorkoutProgress/WorkoutProgress.module.scss
+++ b/src/components/Workout/WorkoutHeader/WorkoutProgress/WorkoutProgress.module.scss
@@ -7,7 +7,7 @@
 }
 
 .WorkoutProgressBar {
-  background-color: colors.$gray;
+  background-color: colors.$light-gray;
   width: 100px;
   height: 0.75rem;
   border-radius: 5px;
