--- a/src/components/Workout/WorkoutHeader/WorkoutProgress/WorkoutProgress.module.scss
+++ b/src/components/Workout/WorkoutHeader/WorkoutProgress/WorkoutProgress.module.scss
@@ -4,6 +4,10 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+
+  & > span {
+    white-space: nowrap;
+  }
 }
 
 .WorkoutProgressBar {
