--- a/src/layouts/HeroSection/HeroSection.module.scss
+++ b/src/layouts/HeroSection/HeroSection.module.scss
@@ -23,6 +23,7 @@
 
   p {
     font-size: clamp(1rem, 0.333rem + 1vw, 1.95rem);
+    line-height: 1.5;
     color: colors.$white;
     margin: 0 auto 1.5rem;
   }
@@ -35,6 +36,11 @@
     padding: 0.75rem 1rem;
     border-radius: 10px;
     box-shadow: 2px 2px 5px rgba(colors.$black, 0.5);
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   }
 
   .secondary {
@@ -47,9 +53,7 @@
 
 
   @media(min-width: 40rem) {
-    .HeroSection {
-      min-height: 70vh;
-    }
+    min-height: 70vh;
 
     .content {
       padding: 0 2rem;
