--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: InterVariable;
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('../fonts/InterVariable.woff2') format("woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +13,6 @@
 }
 
 body, input, textarea, button {
-  font-family: sans-serif;
+  font-family: 'InterVariable', sans-serif;
   font-size: 1rem;
 }
