--- a/src/components/Workout/Workout.module.scss
+++ b/src/components/Workout/Workout.module.scss
@@ -1,4 +1,5 @@
 @use '@/styles/colors';
+@use '@/styles/margins';
 @use '@/styles/screen-sizes.scss' as screenSizes;
 
 .Workout {
@@ -8,6 +9,8 @@
   border: 1px solid colors.$light-gray;
   border-radius: 5px;
   margin: 0 auto;
+
+  width: calc(100vw - margins.$content-container-horizontal-margin * 2);
 
   @media (min-width: screenSizes.$md) {
     max-width: screenSizes.$md;
