--- a/src/components/Workout/WorkoutExercises/Exercise/ExerciseBody/ExerciseBody.module.scss
+++ b/src/components/Workout/WorkoutExercises/Exercise/ExerciseBody/ExerciseBody.module.scss
@@ -1,19 +1,43 @@
 .ExerciseBody {
-  table {
-    width: 100%;
-  }
+  display: grid; 
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 0.5rem; 
+  grid-template-areas: 
+    '. .'
+    '. .'
+    'video video';
 
-  th {
-    text-align: left;
-  }
+  &[data-mode="REGISTER"] {
+    grid-template-columns: 1fr 1fr auto;
+    grid-template-areas: 
+    '. . status'
+    '. . status'
+    'video video video';
 
-  td {
-    white-space: nowrap;
-  }
-
-  tr {
-    &[data-is-expanded="false"] {
-      display: none;
+    @media(min-width: 23rem) {
+      grid-template-columns: 1fr 1fr 1fr 1fr auto;
+      grid-template-rows: auto auto;
+      grid-template-areas: 
+        '. . . . status'
+        'video video video video video';
     }
   }
+
+  @media(min-width: 23rem) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+      '. . . .'
+      'video video video video';
+  }
+}
+
+.VideoArea {
+  grid-area: video;
+}
+
+.StatusArea {
+  grid-area: status;
+  margin: auto auto;
 }
