--- a/src/components/ExerciseList/ExerciseItem/ExerciseItem.module.scss
+++ b/src/components/ExerciseList/ExerciseItem/ExerciseItem.module.scss
@@ -1,7 +1,12 @@
-.ExerciseEditableItem {
+@use '@/styles/colors';
+
+.ExerciseItem {
+  border: 1px solid colors.$gray;
+  padding: 1rem;
   display: flex;
-  align-items: center;
-  gap: 0.5rem;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 5px;
 }
 
 .FieldSet {
@@ -12,6 +17,16 @@
 
 .ExerciseItemHeader {
   display: flex;
+  flex-direction: column;
   gap: 0.5rem;
   align-items: center;
+
+  @media(min-width: 22rem) {
+    flex-direction: row;
+  }
+}
+
+.ExerciseItemButtonsContainer {
+  display: flex;
+  gap: 0.5rem
 }
