feat: Add Footer component and update layout styles

--- a/src/components/ContentContainer/ContentContainer.module.scss
+++ b/src/components/ContentContainer/ContentContainer.module.scss
@@ -2,4 +2,5 @@
 
 .ContentContainer {
   margin: margins.$content-container-vertical-margin margins.$content-container-horizontal-margin;
+  flex: 1;
 }
