--- a/src/layouts/Partnerships/Partnerships.module.scss
+++ b/src/layouts/Partnerships/Partnerships.module.scss
@@ -3,7 +3,7 @@
 
 .Partnerships {
   background: colors.$white;
-  padding: 4rem 1rem;
+  padding: 4rem 1rem 8rem;
   color: colors.$black;
 
   .container {
