--- a/src/components/Workout/WorkoutFooter/WorkoutFooter.module.scss
+++ b/src/components/Workout/WorkoutFooter/WorkoutFooter.module.scss
@@ -4,3 +4,8 @@
   padding: 1rem;
   border-top: 1px solid colors.$light-gray;
 }
+
+.WorkoutComment {
+  color: colors.$gray;
+  font-weight: 600;
+}
