refactor: Moved links to athlete page

--- a/src/components/LinkCard/LinkCard.module.scss
+++ b/src/components/LinkCard/LinkCard.module.scss
@@ -1,6 +1,6 @@
 @use '@/styles/colors';
 
-.ManagePageItem {
+.LinkCard {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -11,6 +11,6 @@
   text-decoration: none;
 }
 
-.ManagePageItemText {
+.LinkCardText {
   font-size: 2rem;
 }
