--- a/src/components/Workout/WorkoutHeader/WorkoutHeader.module.scss
+++ b/src/components/Workout/WorkoutHeader/WorkoutHeader.module.scss
@@ -1,5 +1,7 @@
 .WorkoutHeader {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
@@ -10,4 +12,5 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  margin-left: auto;
 }
