--- a/src/layouts/Footer/Footer.module.scss
+++ b/src/layouts/Footer/Footer.module.scss
@@ -3,14 +3,14 @@
 @use '@/styles/screen-sizes.scss' as screenSizes;
 
 .Footer {
-  background: colors.$blue;
-  color: colors.$white;
+  background: colors.$light-gray;
+  color: rgba(colors.$black, 0.8);
   padding: 1rem 2rem;
 
   .container {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
     justify-content: space-between;    
     text-align: center;
@@ -23,12 +23,11 @@
     .logoSection {
       display: flex;
       place-items: center;
-      gap: 1rem;
+      gap: 0.5rem;
     }
   }
 
   .copy {
     @include typography.caption;
-    color: colors.$white;
   }
 }
