--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@use '@/styles/colors';
+
 @font-face {
   font-family: InterVariable;
   font-style: normal;
@@ -10,6 +12,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: colors.$black;
 }
 
 body, input, textarea, button {
