feat: update translations and enhance About section styling

--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -52,7 +52,7 @@
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
-    color: #333;
+    color: colors.$white;
     padding: 0.5rem;
   }
 
