--- a/src/layouts/About/About.module.scss
+++ b/src/layouts/About/About.module.scss
@@ -34,6 +34,11 @@
       gap: 0.5rem;
       color: colors.$black;
       padding-left: 1.1rem;
+      margin-bottom: 2rem;
+    }
+
+    .link {
+      color: colors.$red;
     }
   }
 
