feat: Add images from Resume page. Improve Hero section image. Add new gray color (#ddd)

--- a/src/components/ExperienceCard/ExperienceCard.module.scss
+++ b/src/components/ExperienceCard/ExperienceCard.module.scss
@@ -23,7 +23,7 @@
     height: 140px;
     border-radius: 1rem;
     overflow: hidden;
-    background: colors.$black;
+    background: colors.$medium-gray;
     display: flex;
     align-items: center;
     justify-content: center;
