--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 $red: #B22222;
 $dark-red: #722f37;
 
@@ -10,6 +12,7 @@ $yellow: #FDB605;
 
 $light-gray: #eee;
 $gray: #bbb;
+$medium-gray: #ddd;
 
 $white: #f8f8f8;
 $black: #333;
