--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -4,7 +4,7 @@
   background-color: $color;
 
   &:hover {
-    background-color: color.adjust($color, $lightness: -20%);
+    background-color: lightenColor($color, -20%);
   }
 }
 
@@ -12,6 +12,15 @@
   color: $color;
 
   &:hover {
-    color: color.adjust($color, $lightness: -20%);
+    color: lightenColor($color, -20%);
   }
+}
+
+@function hoverColor($color) {
+  @return lightenColor($color, -20%);
+}
+
+/* $amount must be in percentage e.g. -20% */
+@function lightenColor($color, $amount) {
+  @return color.adjust($color, $lightness: $amount);
 }
