feat: Changed to load last check ins or date

--- a/src/components/Forms/FieldWithLabel/FieldWithLabel.module.scss
+++ b/src/components/Forms/FieldWithLabel/FieldWithLabel.module.scss
@@ -8,4 +8,10 @@
   span {
     white-space: nowrap;
   }
+
+  &:has([type="checkbox"]) {
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+  }
 }
