feat: Enhance styling and structure for SignIn and SignUp pages, including button adjustments and form layout improvements

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,6 +10,7 @@
   border-radius: 5px;
   width: fit-content;
   cursor: pointer;
+  transition: background-color 0.2s;
 
   &[data-text-only="false"] {
     &[data-category="DEFAULT"] {
