--- a/src/components/Forms/FieldWithLabel/FieldWithLabel.module.scss
+++ b/src/components/Forms/FieldWithLabel/FieldWithLabel.module.scss
@@ -5,13 +5,10 @@
   gap: 0.25rem;
   width: 100%;
 
-  span {
-    white-space: nowrap;
-  }
-
   &:has([type="checkbox"]) {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: flex-end;
+    gap: 0.5rem;
   }
 }
