--- a/src/components/Forms/Input/Input.module.scss
+++ b/src/components/Forms/Input/Input.module.scss
@@ -1,8 +1,15 @@
 .Input {
-  padding: 0.12rem;
+  padding: 0.5rem;
+  height: 2.5rem;
   width: 100%;
 
   &[type="checkbox"] {
     width: fit-content;
+    // height: 1rem;
+    // width: 1rem; 
+  }
+
+  &[type="password"] {
+    font-size: 0.6rem;
   }
 }
