--- a/src/pages/SignInPage/SignInPage.module.scss
+++ b/src/pages/SignInPage/SignInPage.module.scss
@@ -3,12 +3,24 @@
 .SignInContainer {
   max-width: 350px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 
-  @media (min-width: screenSizes.$sm) {
-    // width: 350px;
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 1rem;
+
+    .btnSignIn {
+      width: 100%;
+      padding: 1rem;
+      place-content: center;
+    }
+
+    .btnSignUp:hover {
+      text-decoration: underline;
+    }
   }
-}
-
-.SignInPage {
-
 }
