--- a/src/pages/PublicationPage/PublicationPage.module.scss
+++ b/src/pages/PublicationPage/PublicationPage.module.scss
@@ -1,3 +1,54 @@
+@use '@/styles/colors';
+@use '@/styles/typography';
+
 .PublicationPage {
-  
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
+  border-radius: 5px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 1.5rem;
+  border: 2px solid colors.$light-gray;
+  padding: 2rem;
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  h2 {
+    @include typography.heading-3;
+  }
+
+  .date {
+    font-size: typography.$font-sm;
+  }
+
+  .PublicationCardContent {
+    @include typography.body;
+
+    display: flex;
+    flex-direction: column;
+
+    img {
+      max-width: 100%;
+      max-height: 300px;
+      align-self: center;
+    }
+  }
+
+  .btnBack {
+    width: fit-content;
+    text-decoration: none;
+
+    button {
+      @include typography.caption;
+      display: flex;
+      align-items: center;
+      gap: 0.35rem;
+      text-decoration: none;
+    }
+  }
 }
